[tool.poetry]
name = "datamanager"
version = "1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "==22.3.0"
bleach = "<5.0.0"
boto3 = "==1.28.30"
ckanapi = "==4.3"
dj-database-url = "==0.5.0"
Django = "==2.2.20"
django-admin-sortable = "==2.2.3"
django-adminplus = "==0.5"
django-allauth = "==0.41.0"
django-autoslug = "==1.9.6"
django-ckeditor = "==5.9.0"
django-debug-toolbar = "==2.2"
django-extensions = "==3.1.5"
django-environ = "==0.4.5"
django-filter = "==2.2.0"
django-haystack = "==2.8.1"
django-import-export = "==2.0.2"
django-js-asset = "==1.2.2"
django-markdownify = "==0.8.0"
django-partial-index = "==0.6.0"
django-picklefield = "==2.1.1"
django-pipeline = "==1.7.0"
django-q = "==1.1.0"
django-recaptcha = "==2.0.6"
djangorestframework = "==3.12.4"
djangorestframework-csv = "==2.1.0"
django-storages = "==1.9.1"
drf-haystack = "==1.8.9"
gevent = "==23.9.0"
gunicorn = "==20.0.4"
httplib2 = "==0.19.1"
openpyxl = "==3.0.3"
pathlib = "==1.0.1"
psycogreen = "==1.0.2"
psycopg2 = "==2.8.4"
pyScss = "==1.4.0"
pysolr = "==3.8.1"
python-dateutil = "==2.8.1"
python-slugify = "==4.0.0"
python3-openid = "==3.1.0"
pytz = "==2019.3"
requests = "==2.31.0"
requests-oauthlib = "==1.3.0"
sentry-sdk = "==1.29.2"
simplejson = "==3.17.0"
tablib = "==1.1.0"
Unidecode = "==1.1.1"
urllib3 = "==1.26.18"
wagtail = "==2.7.4"
Werkzeug = "==3.0.1"
whitenoise = "==5.0.1"
xlrd = "==1.2.0"
xlwt = "==1.3.0"
coverage = "^6.5.0"
mock = "4.0.1"
django-constance = "^2.9.1"
xlsx-streaming = "==1.1.0"
petl = "==1.7.13"
frictionless = {extras = ["json"], version = "==4.40.8"}
drf-excel = "==1.0.0"
selenium = "==4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
